replace Guava classes with Java 8 stream API